fixing stretched logo

--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -81,6 +81,8 @@
 
 .menu-logo-img {
   height: 110px;
+  width: auto;
+  object-fit: contain;
   /* Increased by 10% */
   align-self: center;
 }
